// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webex Meeting Controls snapshot matches snapshot 1`] = `
<div
  className="wxc-meeting-controls"
>
  <div
    className="control-left"
  />
  <div
    className="control-center"
  />
  <div
    className="control-right"
  />
</div>
`;

exports[`Webex Meeting Controls snapshot matches snapshot with custom CSS class 1`] = `
<div
  className="wxc-meeting-controls my-custom-css-class"
>
  <div
    className="control-left"
  />
  <div
    className="control-center"
  />
  <div
    className="control-right"
  />
</div>
`;
